--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Hello, World!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ut eius consequatur itaque nam inventore autem rem similique dolores tenetur fugiat quod aperiam reiciendis quo, cupiditate corrupti adipisci nemo sunt?</p>
 </body>
 </html>
